# deep_research

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
agent/src/: agent.py  llm.py  message.py
agent/src/agents/: simple_agent.py
agent/src/tools/: base.py
agent/src/tools/builtin/: search_tools.py
backend/src/: agent.py  cache.py  config.py  exceptions.py  main.py  models.py  prompts.py  utils.py
backend/src/services/: planner.py  reporter.py  reviewer.py  search.py  summarizer.py
docs/: STREAMING_CLIENT.md
tests/: conftest.py
tests/integration/: test_agent.py  test_api.py  test_search.py
tests/unit/: test_agent_orchestration.py  test_api_endpoints.py  test_cache.py  test_config.py  test_planning.py  test_reporter.py  test_reviewer.py  test_search_dispatch.py  test_summarizer.py  test_utils.py
